src/objects/DA_Variable__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Deal Assessment Variables</description>
    <fields>
        <fullName>Country_Australia__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Country Australia</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Benelux__c</fullName>
        <label>Country Benelux</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Brazil__c</fullName>
        <label>Country Brazil</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Canada__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Country Canada</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_France__c</fullName>
        <label>Country France</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Germany__c</fullName>
        <label>Country Germany</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Iberia__c</fullName>
        <label>Country Iberia</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_India__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Country India</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Italy__c</fullName>
        <label>Country Italy</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Japan__c</fullName>
        <label>Country Japan</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_MEA__c</fullName>
        <label>Country MEA</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Mexico__c</fullName>
        <label>Country Mexico</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Nordic__c</fullName>
        <label>Country Nordic</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Poland__c</fullName>
        <label>Country Poland</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Portugal__c</fullName>
        <label>Country Portugal</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Russia__c</fullName>
        <label>Country Russia</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Spain__c</fullName>
        <label>Country Spain</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_United_Kingdom__c</fullName>
        <label>Country United Kingdom</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_United_States__c</fullName>
        <description>Reagent GP</description>
        <label>Country United States</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <externalId>true</externalId>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Volume__c</fullName>
        <label>Max Volume</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Volume__c</fullName>
        <label>Min Volume</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_EMEA__c</fullName>
        <label>Total EMEA</label>
        <precision>17</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <label>DA Variable</label>
</CustomObject>